[^] Slicing Landing Page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,23 +17,35 @@
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
-:root { 
-  --background-color: #F4F4F4; /* Background color for the entire website, including individual sections */
-  --default-color: #212529; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #37373f; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #000000; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
-  --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
-  --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+:root {
+  --background-color: #F4F4F4;
+  /* Background color for the entire website, including individual sections */
+  --default-color: #212529;
+  /* Default color used for the majority of the text content across the entire website */
+  --heading-color: #37373f;
+  /* Color for headings, subheadings and title throughout the website */
+  --accent-color: #000000;
+  /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --surface-color: #ffffff;
+  /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
+  --contrast-color: #ffffff;
+  /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
-  --nav-color: #7f7f90;  /* The default color of the main navmenu links */
-  --nav-hover-color: #ce1212; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #F4F4F4; /* Used as the background color for mobile navigation menu */
-  --nav-dropdown-background-color: #F4F4F4; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
-  --nav-dropdown-color: #7f7f90; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #ce1212; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-color: #7f7f90;
+  /* The default color of the main navmenu links */
+  --nav-hover-color: #ce1212;
+  /* Applied to main navmenu links when they are hovered over or active */
+  --nav-mobile-background-color: #F4F4F4;
+  /* Used as the background color for mobile navigation menu */
+  --nav-dropdown-background-color: #F4F4F4;
+  /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
+  --nav-dropdown-color: #7f7f90;
+  /* Used for navigation links of the dropdown items in the navigation menu. */
+  --nav-dropdown-hover-color: #ce1212;
+  /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -782,14 +794,138 @@ section,
 .section-title p {
   color: var(--heading-color);
   margin: 10px 0 0 0;
-  font-size: 48px;
-  font-weight: 500;
+  font-size: 28px;
+  font-weight: bold;
   font-family: var(--heading-font);
 }
 
 .section-title p .description-title {
   color: var(--accent-color);
 }
+
+.separator-line {
+  width: 70px;
+  height: 3px;
+  background-color: #000000;
+}
+
+/*--------------------------------------------------------------
+# Food Section
+--------------------------------------------------------------*/
+.food-section {
+  width: 100%;
+  padding-top: 180px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-bottom: 100px;
+  background-image: url("../img/banners/img_bg_about_big.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.card-food {
+  flex: 1;
+  margin: 10px;
+  max-width: 30%;
+  height: 350px;
+  box-sizing: border-box;
+  background-color: #f8f8f8;
+  padding: 20px;
+  border-radius: 16px;
+}
+
+.food-name {
+  padding-top: 90px;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.food-desc {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.food-img {
+  width: 50px;
+  height: 50px;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+  overflow: hidden;
+}
+
+.out-of-container {
+  position: absolute;
+  transform: translate(20px, -120px);
+  width: 200px;
+  height: auto;
+}
+
+/*--------------------------------------------------------------
+# News Section
+--------------------------------------------------------------*/
+.news-section {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.card-news {
+  flex: 1;
+}
+.single-news {
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-news-grid {
+  flex: 1;
+  margin-left: 15px;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 4px;
+}
+
+.card-news-grid {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+}
+
+.information {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.spacer {
+  flex-grow: 1;
+}
+
 
 /*--------------------------------------------------------------
 # Hero Section
@@ -818,7 +954,19 @@ section,
 
 .hero .btn-get-started {
   color: var(--contrast-color);
-  background: var(--accent-color);
+  background-color: var(--accent-color);
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 60px 12px 60px;
+  transition: 0.5s;
+  box-shadow: 0 8px 28px rgba(0, 0, 0, 0.1);
+}
+
+.btn-get-started {
+  color: var(--contrast-color);
+  background-color: var(--accent-color);
   font-weight: 400;
   font-size: 15px;
   letter-spacing: 1px;
@@ -893,6 +1041,10 @@ section,
 /*--------------------------------------------------------------
 # About Section
 --------------------------------------------------------------*/
+.about {
+  background-color: var(--contrast-color);
+}
+
 .about h3 {
   font-weight: 700;
   font-size: 28px;
@@ -1153,6 +1305,7 @@ section,
   color: var(--accent-color);
 }
 
+
 .menu .tab-content .menu-item {
   text-align-last: center;
 }
@@ -1180,6 +1333,21 @@ section,
   font-weight: 700;
   color: var(--accent-color);
 }
+
+/*--------------------------------------------------------------
+# Gallery menu
+--------------------------------------------------------------*/
+.gallery-menu {
+  background-color: var(--contrast-color);
+}
+
+.menu-img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
 
 /*--------------------------------------------------------------
 # Testimonials Section
