--- a/public/css/main.css
+++ b/public/css/main.css
@@ -893,6 +893,7 @@ section,
 .card-news {
   flex: 1;
 }
+
 .single-news {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -1109,6 +1110,19 @@ section,
   position: absolute;
   left: calc(50% - 47px);
   top: calc(50% - 47px);
+}
+
+.image-about {
+  display: flex;
+  gap: 10px;
+}
+
+.image-about img {
+  flex: 1;
+  width: 200px;
+  height: 300px;
+  border-radius: 10px;
+  object-fit: cover;
 }
 
 /*--------------------------------------------------------------
@@ -1383,11 +1397,13 @@ section,
 --------------------------------------------------------------*/
 .swiper-slide img {
   width: 900px;
-  height: 300px; 
-  object-fit: cover; 
+  height: 300px;
+  object-fit: cover;
   border-radius: 10px;
 }
-.swiper-button-prev, .swiper-button-next {
+
+.swiper-button-prev,
+.swiper-button-next {
   width: 30px !important;
   height: 30px !important;
   border-radius: 100%;
@@ -1861,5 +1877,5 @@ section,
 # Starter Section Section
 --------------------------------------------------------------*/
 /* .starter-section { */
-  /* Add your styles here */
+/* Add your styles here */
 /* } */
