--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1126,6 +1126,22 @@ section,
 }
 
 /*--------------------------------------------------------------
+# News Section
+--------------------------------------------------------------*/
+.image-news {
+  display: flex;
+  gap: 10px;
+}
+
+.image-news img {
+  flex: 1;
+  width: 600px;
+  height: 400px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+/*--------------------------------------------------------------
 # Why Us Section
 --------------------------------------------------------------*/
 .why-us .why-box {
