--- a/public/css/main.css
+++ b/public/css/main.css
@@ -463,7 +463,7 @@ h6 {
   .food-section .card-food {
     height: 300px;
     max-width: 250px;
-    margin: 0 auto;
+    margin: 50px auto;
   }
 
   .food-name {
@@ -875,6 +875,8 @@ section,
   background-color: #f8f8f8;
   padding: 20px;
   border-radius: 16px;
+  margin: 50px auto;
+  max-width: 250px;
 }
 
 .food-name {
@@ -891,6 +893,7 @@ section,
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
+  max-inline-size: 2;
 }
 
 .food-img {
@@ -914,6 +917,11 @@ section,
 
 .single-news {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  min-width: 200px;
+  
+}
+.img-news {
+  object-fit: cover;
 }
 
 .card-grid {
@@ -950,6 +958,7 @@ section,
 
 .card-news-img-mini {
   height: 150px;
+  object-fit: cover;
 }
 
 .information {
